--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">NewsApp</string>
+    <string name="title_tab_home">Home</string>
+    <string name="title_tab_search">Search</string>
+    <string name="title_tab_more">More</string>
+    <string name="title_tab_favourites">Favourites</string>
 </resources>
