NEWS-6 feat: Add paging for search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_tab_search">Search</string>
     <string name="title_tab_more">More</string>
     <string name="title_tab_favourites">Favourites</string>
+
+    <string name="generic_error">Something went wrong</string>
 </resources>
