--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="title_tab_favourites">Favourites</string>
 
     <string name="generic_error">Something went wrong</string>
+
+    <string name="offline_text">It seems you do not have internet connection</string>
 </resources>
