--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,12 @@
     <string name="app_name">NewsApp</string>
     <string name="title_tab_home">Home</string>
     <string name="title_tab_search">Search</string>
-    <string name="title_tab_more">More</string>
     <string name="title_tab_saved">Saved</string>
 
     <string name="generic_error">Something went wrong</string>
 
     <string name="search">Search</string>
-    <string name="offline_text">It seems you do not have internet connection</string>
-    <string name="no_search_results">No results for selected query</string>
-    <string name="no_saved">You need to save articles firstly</string>
+    <string name="offline_text">It looks like you don\'t have an internet connection</string>
+    <string name="no_search_results">No search results for this query</string>
+    <string name="no_saved">It looks like you haven\'t saved any articles yet</string>
 </resources>
