--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -1,34 +1,27 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">NewsApp</string>
     <string name="title_tab_home">Top news</string>
     <string name="title_tab_search">Search</string>
     <string name="title_tab_saved">Saved</string>
-
     <string name="generic_error">Something went wrong</string>
-
     <string name="search">Search</string>
     <string name="offline_text">It looks like you don\'t have an internet connection</string>
     <string name="no_search_results">No search results for this query</string>
     <string name="no_saved">It looks like you haven\'t saved any articles yet</string>
     <string name="news_language">News language</string>
     <string name="title_tab_settings">Settings</string>
-    <string name="top_news_language">Country of top news language</string>
-
+    <string name="top_news_language">Country of top news</string>
     <string name="country_poland">Poland</string>
     <string name="language_poland">Polish</string>
-
     <string name="country_usa">United States</string>
     <string name="language_usa">English</string>
-
-    <string name="country_czech_republic">Czech Republic</string>
-    <string name="language_czech_republic">Czech</string>
-
-    <string name="country_germany">Germany</string>
-    <string name="language_germany">German</string>
-
-    <string name="country_ukraine">Ukraine</string>
-    <string name="language_ukraine">Ukrainian</string>
-
     <string name="country_france">France</string>
     <string name="language_france">French</string>
+    <string name="country_germany">Germany</string>
+    <string name="language_germany">German</string>
+    <string name="language_ukraine">Ukrainian</string>
+    <string name="country_ukraine">Ukraine</string>
+    <string name="language_czech_republic">Czech</string>
+    <string name="country_czech_republic">Czech Republic</string>
 </resources>
